[gd_scene load_steps=7 format=3 uid="uid://8y6ut6u80xe1"]

[ext_resource type="Script" path="res://scripts/characters/enemies/enemy_script.gd" id="1_5fv63"]
[ext_resource type="PackedScene" uid="uid://bqqugbvnpnwfm" path="res://scenes/interface/floating_text.tscn" id="2_bmpcd"]
[ext_resource type="Script" path="res://scripts/characters/enemies/enemy_texture_template.gd" id="2_o1lt0"]
[ext_resource type="PackedScene" uid="uid://bnwelkt0285m2" path="res://scenes/interface/health_bar.tscn" id="2_y2qj5"]
[ext_resource type="Script" path="res://scripts/audio/audio_sfx.gd" id="4_cvc07"]

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jmp2j"]

[node name="EnemyTemplate" type="CharacterBody2D" node_paths=PackedStringArray("attack_area", "damage_area", "texture", "animation", "stuck_timer", "detection_area", "particles", "health_bar", "walking_sfx")]
collision_layer = 4
collision_mask = 2
motion_mode = 1
script = ExtResource("1_5fv63")
attack_area = NodePath("AttackArea")
damage_area = NodePath("DamageArea")
texture = NodePath("Texture")
animation = NodePath("Animation")
stuck_timer = NodePath("StuckTimer")
detection_area = NodePath("DetectionArea")
particles = NodePath("Particles")
health_bar = NodePath("HealthBar")
walking_sfx = NodePath("WalkingSfx")
floating_text = ExtResource("2_bmpcd")

[node name="Particles" type="GPUParticles2D" parent="."]

[node name="Texture" type="Sprite2D" parent="." node_paths=PackedStringArray("animation", "enemy", "attack_area_collision", "particles", "action_sfx") groups=["animation"]]
script = ExtResource("2_o1lt0")
animation = NodePath("../Animation")
enemy = NodePath("..")
attack_area_collision = NodePath("../AttackArea/Collision")
particles = NodePath("../Particles")
action_sfx = NodePath("../ActionSfx")

[node name="Animation" type="AnimationPlayer" parent="." groups=["animation"]]
libraries = {
"": SubResource("AnimationLibrary_jmp2j")
}

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -7)

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 4

[node name="Collision" type="CollisionShape2D" parent="DamageArea"]
position = Vector2(0, -1)

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 4

[node name="Collision" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(0, -7)

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0

[node name="Collision" type="CollisionShape2D" parent="DetectionArea"]

[node name="StuckTimer" type="Timer" parent="."]
one_shot = true

[node name="HealthBar" parent="." instance=ExtResource("2_y2qj5")]

[node name="VisibleOnScreenNotifier" type="VisibleOnScreenNotifier2D" parent="."]

[node name="ActionSfx" type="AudioStreamPlayer" parent="."]
bus = &"Sfx"
script = ExtResource("4_cvc07")

[node name="WalkingSfx" type="AudioStreamPlayer2D" parent="."]
bus = &"Sfx"

[node name="Raycasts" type="Node2D" parent="."]

[node name="RayCastN" type="RayCast2D" parent="Raycasts"]
rotation = 3.14159

[node name="RayCastS" type="RayCast2D" parent="Raycasts"]

[node name="RayCastW" type="RayCast2D" parent="Raycasts"]
rotation = 1.5708

[node name="RayCastE" type="RayCast2D" parent="Raycasts"]
rotation = -1.5708

[node name="RayCastNE" type="RayCast2D" parent="Raycasts"]
rotation = -2.35619

[node name="RayCastSE" type="RayCast2D" parent="Raycasts"]
rotation = -0.785398

[node name="RayCastSW" type="RayCast2D" parent="Raycasts"]
rotation = 0.785398

[node name="RayCastNW" type="RayCast2D" parent="Raycasts"]
rotation = 2.35619

[connection signal="animation_finished" from="Animation" to="Texture" method="on_animation_finished"]
[connection signal="area_entered" from="DamageArea" to="." method="on_damage_area_entered"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_entered" from="DetectionArea" to="." method="on_detection_area_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="on_detection_area_exited"]
[connection signal="timeout" from="StuckTimer" to="." method="on_stuck_timer_timeout"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier" to="." method="on_visible_screen_notifier"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier" to="." method="on_visible_screen_exited"]
